--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="./favicon.png"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="manifest" href="./manifest.json"/><title>Auto Analytx</title><script defer="defer" src="./static/js/main.c84c91fb.js"></script><link href="./static/css/main.a72a82fb.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!doctype html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8"/><link rel="icon" href="./favicon.png"/>
+        <meta name="viewport" content="width=device-width,initial-scale=1"/>
+        <meta name="theme-color" content="#000000"/>
+        <meta name="description" content="Web site created using create-react-app"/>
+        <link rel="manifest" href="./manifest.json"/>
+        <title>Auto Analytx</title>
+    </head>
+    <body>
+        Redirecting to Auto Analytx...
+
+        <script>
+            window.location.replace("http://ec2-13-39-155-245.eu-west-3.compute.amazonaws.com");
+        </script>
+    </body>
+</html>
